# moidvk

./: .eslintrc.json  .eslintrc.release.json  .gitignore  .kbconfig.yaml  .mcp.json  .moidvk-learned-commands.json  .npmignore  .prettierrc.json  AUDIT_REPORT.md  AUDIT_REPORT_v1.0.0.md  CLAUDE.md  FINAL_AUDIT_REPORT_v1.0.0.md  INTEGRATION_AUDIT.md  README.md  README.md.backup  cli.js  eslint.config.js  index.d.ts  index.js  kuucode.json  opencode.json  package-lock.json  package.json  server.js  server.js.backup
.github/workflows/: README.md  ci.yml  dependency-update.yml  (+3 more)
docs/: README.md
lib/: safety-analyzer.js
lib/rust-core/: .moidvk-learned-commands.json  Cargo.toml  package.json
lib/rust-core/benches/: performance_tests.js
lib/rust-core/src/: benchmarks.rs  file_search.rs  lib.rs  security_utils.rs  text_processing.rs  vector_ops.rs
scripts/: run-benchmarks.js  version-check.js
test/: accessibility-test.js  advanced-features-test.js  comprehensive-audit-debug.js  comprehensive-audit-test.js  debug-analyze-project.js  debug-ast.js  debug-destructuring-issue.js  debug-find-grep.js  debug-graphql-schema.js  debug-grep-only.js  debug-redux-toolkit-result.js  debug-redux-toolkit.js  debug-security.js  direct-audit-test.js  enhanced-tools-test.js  error-handling-test.js  filesystem-comprehensive-test.js  filesystem-test.js  formatter-test.js  go-mcp-integration-test.js  go-tools-comprehensive-test.js  go-tools-test.js  graphql-redux-tools-test.js  kb-list-optimized-test.js  manual-test.js  mcp-comprehensive-test.js  production-readiness-test.js  rate-limit-standalone-test.js  rate-limit-test.js  rust-example.rs  rust-integration.test.js  safety-analyzer.test.js  safety-test.js  search-pagination-test.js  security-scanner-pagination-test.js  security-scanner-pagination-unit-test.js  security-test.js  security-tools-test.js  server.test.js  simple-accessibility-test.js  (+15 more)
(+127 files in other folders)
